Initial Commit on adjustment branch

--- a/about.html
+++ b/about.html
@@ -74,18 +74,18 @@
       <h2>My skills.</h2>
       <div class="row">
         <div class="col-lg-4 col-md-12">
-          <i class="fa-brands fa-python fa-3x" id=skill_icon></i><br>
-          <h4 class="main-feature">Python</h3><br>
+          <i class="fa-brands fa-python fa-3x skill_icon"></i><br>
+          <h4 class="main-feature">Python</h4><br>
           <p class="detailed-feature">My main programming language.</p>
         </div>
         <div class="col-lg-4 col-md-12">
-          <i class="fa-solid fa-display fa-3x" id=skill_icon></i><br>
-          <h4 class="main-feature">Web Development</h3><br>
+          <i class="fa-solid fa-display fa-3x skill_icon"></i><br>
+          <h4 class="main-feature">Web Development</h4><br>
           <p class="detailed-feature">HTML/CSS/JavaScript/Flask/APIs/SQL</p>
         </div>
         <div class="col-lg-4 col-md-12">
-          <i class="fa-solid fa-magnifying-glass fa-3x" id=skill_icon></i><br>
-          <h4 class="main-feature">Data Analyzing</h3><br>
+          <i class="fa-solid fa-magnifying-glass fa-3x skill_icon"></i><br>
+          <h4 class="main-feature">Data Analyzing</h4><br>
           <p class="detailed-feature">Still learning, but aquired basic skills.</p>
         </div>
       </div>
