--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,8 @@
       <br>
       <br>
       <br>
-      <h2 class="title" id="contact" style="color: grey;">Get in touch!</h2>
-      <p class="message" id="contact">It would be helpful if you could give me any advice to improve my code!</p>
+      <h2 class="contact" id="title" style="color: grey;">Get in touch!</h2>
+      <p class="contact" id="message">It would be helpful if you could give me any advice to improve my code!</p>
       <button type="button" class="btn btn-light contact-btn"><a class="btn" href="mailto:test@gmail.com" style="color: grey;">CONTACT ME</a></button>
     </div>
   </body>
