--- a/index.html
+++ b/index.html
@@ -19,38 +19,84 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="https://github.com/rinagobo?tab=repositories">Work</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-        </ul>
-      </div>
-    </nav>
-
     <div class="top-container">
       <div class="title-area">
         <h1 class="title">I'm Rina,</h1>
-        <h2 class="subtitle">a python / web developer.</h2>
+        <h1 class="subtitle">a python / web developer.</h1>
       </div>
       <section class="contact-link">
         <a href=""><i class="contact-icon fa-brands fa-twitter"></i></a><a href=""><i class="contact-icon fa-brands fa-github"></i></a><a href=""><i class="contact-icon fa-brands fa-instagram"></i></a><a href="mailto:test@gmail.com"><i class="contact-icon fa-solid fa-envelope"></i></a>
       </section>
+    </div>
+
+    <div class="middle-container">
+        <div class="first-container">
+        <h2>Who I am.</h2>
+        <p class="myself">
+            Resilient and adaptable professional. I am seeking to use my strong communication
+            and multitasking skills garnered from my previous roles to secure an entry level position.
+            I challenge myself to change my career into IT industry.
+        </p>
+        </div>
+
+        <hr class="divider">
+
+        <div class="second-container">
+          <h2>A brief history.</h2>
+          <div class="row">
+              <div class="card1 col-lg-4 col-md-12" style="width: 20rem;">
+                <div class="card-body">
+                  <h5 class="card-title">0-2.5 Teacher</h5>
+                  <p class="card-text">Home Economics</p>
+                </div>
+              </div>
+              <div class="card2 col-lg-4 col-md-12" style="width: 20rem;">
+                <div class="card-body">
+                  <h5 class="card-title">2.5-03 Contractor</h5>
+                  <p class="card-text">HR & Sales</p>
+                </div>
+              </div>
+              <div class="card3 col-lg-4 col-md-12" style="width: 20rem;">
+                <div class="card-body">
+                  <h5 class="card-title">03-04 Student</h5>
+                  <p class="card-text">UTAustin / Udemy</p>
+                </div>
+              </div>
+          </div>
+        </div>
+
+        <hr class="divider">
+
+        <div class="third-container">
+          <h2>My skills.</h2>
+          <div class="row">
+            <div class="col-lg-4 col-md-12">
+              <i class="fa-brands fa-python fa-3x skill_icon"></i><br>
+              <h4 class="main-feature">Python</h4><br>
+              <p class="detailed-feature">My main programming language.</p>
+            </div>
+            <div class="col-lg-4 col-md-12">
+              <i class="fa-solid fa-display fa-3x skill_icon"></i><br>
+              <h4 class="main-feature">Web Development</h4><br>
+              <p class="detailed-feature">HTML/CSS/JavaScript/Flask/APIs/SQL</p>
+            </div>
+            <div class="col-lg-4 col-md-12">
+              <i class="fa-solid fa-magnifying-glass fa-3x skill_icon"></i><br>
+              <h4 class="main-feature">Data Analyzing</h4><br>
+              <p class="detailed-feature">Still learning, but aquired basic skills.</p>
+            </div>
+          </div>
+        </div>
+    </div>
+
+    <div class="bottom-container" style="background-color: #F2EBE9;">
+      <h2 class="contact" style="color: grey;">Get in touch!</h2>
+      <p class="contact">It would be helpful if you could give me any advice to improve my code!</p>
+      <button type="button" class="btn btn-light contact-btn"><a class="btn" href="mailto:test@gmail.com" style="color: grey;">CONTACT ME</a></button>
       <footer>
         <p class="copyright">Copyright ©2023 RinaNeman</p>
       </footer>
     </div>
-
   </body>
 
 </html>
